puppet: remove okhttp dependency